frame/support/test/tests/derive_no_bound_ui/eq.stderr
error[E0277]: can't compare `Foo<T>` with `Foo<T>`
   --> $DIR/eq.rs:6:8
    |
6   | struct Foo<T: Trait> {
    |        ^^^ no implementation for `Foo<T> == Foo<T>`
    |
   ::: $RUST/src/libcore/cmp.rs
    |
    | pub trait Eq: PartialEq<Self> {
    |               --------------- required by this bound in `std::cmp::Eq`
    |
    = help: the trait `std::cmp::PartialEq` is not implemented for `Foo<T>`
