frame/support/test/tests/derive_no_bound_ui/eq.rs
trait Trait {
	type C;
}

#[derive(frame_support::EqNoBound)]
struct Foo<T: Trait> {
	c: T::C,
}

fn main() {}
